# fly380s_8910

./: CUS_Release_Notes_8910_MODULE_V1_3.xlsx  version_debug.txt
idh.code/: CMakeLists.txt  Kconfig
idh.code/cmake/: toolchain-gcc.cmake
idh.code/components/: CMakeLists.txt
idh.code/components/abup/: CMakeLists.txt  Kconfig
idh.code/components/abup/include/: abup_common.h  abup_config.h.in  abup_define.h  abup_file.h  abup_fota.h  abup_http.h  abup_md5.h
idh.code/components/abup/src/: abup_common.c  abup_file.c  abup_fota.c
idh.code/components/apploader/: CMakeLists.txt
idh.code/components/apploader/pack/: CMakeLists.txt  core_filelist.xml
idh.code/components/apploader/src/: app_loader.c  app_loader_vars.c  core_config.cmake.in  core_export.list
idh.code/components/appstart/: CMakeLists.txt  Kconfig  readme.txt
idh.code/components/appstart/include/: app_config.h.in
idh.code/components/appstart/src/: app_internal.h  app_keypad.c  app_sim_detect.c  app_start.c  app_start_xcpu.c
idh.code/components/atr/: CMakeLists.txt  Kconfig  core.cmake
idh.code/components/atr/core2/: Makefile  README.md  at_cmux_engine.c  at_parse.lex  at_parse.lex.c  at_parse.y  at_parse.y.c  at_parse.y.h  at_parse_test.c  core.cmake
idh.code/components/atr/include/: at_cfg.h  at_engine.h  atr_config.h.in
idh.code/components/atr/src/: at_cmd_cfg.c  at_cmd_cfg_default.c  at_cmd_table.gperf  at_device.c  at_device_diag.c  at_device_uart.c  at_device_userial.c  at_device_virt.c  at_engine.c  at_param.c  at_parse.c  at_response.c  at_setting.proto  at_setting_codec.c
idh.code/components/ats/: CMakeLists.txt  Kconfig
idh.code/components/ats/account/: Kconfig  at_cmd_account.c
idh.code/components/ats/alic/: at_cmd_alic.c
idh.code/components/ats/apzzd/: Kconfig  at_cmd_apzzd.c
idh.code/components/ats/audio/: at_cmd_audio.c  at_cmd_tts.c
idh.code/components/ats/battery/: at_cmd_battery.c
idh.code/components/ats/bt/: Kconfig  at_cmd_bt.c  at_cmd_bt_classic.c  at_cmd_btcomm.c  at_cmd_btmsg.c  at_cmd_spble.c  at_cmd_spbletest.c  at_cmd_spbttest.c
idh.code/components/ats/cam/: at_cmd_camera.c
idh.code/components/ats/cc/: at_cmd_cc.c
idh.code/components/ats/cfw/: at_cfw.c
idh.code/components/ats/coap/: at_cmd_coap.c
idh.code/components/ats/dm/: Kconfig  at_cmd_dm_lwm2m.c
idh.code/components/ats/emod/: at_cmd_emod.c
idh.code/components/ats/fs/: at_cmd_fs.c
idh.code/components/ats/ftp/: Kconfig  at_cmd_ftp.c  at_cmd_myftp.c  at_cmd_newftp.c
idh.code/components/ats/gc/: at_cmd_fupdate.c  at_cmd_gc.c
idh.code/components/ats/gprs/: at_cmd_gprs.c
idh.code/components/ats/http/: at_cmd_http.c
idh.code/components/ats/id/: at_cmd_id.c
idh.code/components/ats/include/: at_cfw.h  at_cmd_alic.h  at_cmd_btmsg.h  at_cmd_dm_lwm2m.h  at_cmd_ftp.h  at_cmd_gprs.h  at_cmd_myftp.h  at_cmd_ss.h  at_cmd_tcpip.h  ats_config.h.in  tb.h
idh.code/components/ats/lwm2m/: Kconfig  at_cmd_cissdk_mipl.c  at_cmd_oceanconnect.c
idh.code/components/ats/misc/: Kconfig  at_cmd_debug.c  at_cmd_sysnv.c
idh.code/components/ats/mqtt/: at_cmd_mqtt.c  at_cmd_pahomqtt.c
idh.code/components/ats/myinfo/: at_cmd_myinfo.c
idh.code/components/ats/nv/: at_cmd_nv.c
idh.code/components/ats/nw/: at_cmd_nw.c
idh.code/components/ats/pbk/: at_cmd_pbk.c
idh.code/components/ats/sat/: at_cmd_sat.c
idh.code/components/ats/sim/: at_cmd_sim.c
idh.code/components/ats/simlock/: at_cmd_simlock.c
idh.code/components/ats/sms/: at_cmd_sms.c
idh.code/components/ats/sntp/: at_cmd_sntp.c
idh.code/components/ats/ss/: at_cmd_ss.c  at_ss_api.c
idh.code/components/ats/ssim/: at_cmd_ssim.c
idh.code/components/ats/tb/: tb.c  tb_internal.h  tb_test.c
idh.code/components/ats/tcpip/: Kconfig  at_cmd_mynet.c  at_cmd_netif.c  at_cmd_ping.c  (+3 more)
idh.code/components/audio/: CMakeLists.txt  Kconfig  core.cmake
idh.code/components/aworker/: CMakeLists.txt
idh.code/components/bootloader/: CMakeLists.txt  Kconfig
idh.code/components/calclib/: CMakeLists.txt
idh.code/components/cfw/: CMakeLists.txt  core.cmake
idh.code/components/chip/: Kconfig  chip_8910.cmake
idh.code/components/connectivity/: CMakeLists.txt  Kconfig
idh.code/components/ctelpttdemo/: CMakeLists.txt  Kconfig
idh.code/components/diag/: CMakeLists.txt  Kconfig
idh.code/components/driver/: CMakeLists.txt  Kconfig  core.cmake
idh.code/components/firmwareupdate/: CMakeLists.txt  core.cmake
idh.code/components/fs/: CMakeLists.txt
idh.code/components/hal/: CMakeLists.txt  Kconfig
idh.code/components/kernel/: CMakeLists.txt  Kconfig  core.cmake
idh.code/components/libjpeg-turbo/: CMakeLists.txt  README
idh.code/components/libs/: CMakeLists.txt
idh.code/components/littlevgl/: CMakeLists.txt  Kconfig  lv_conf.h
idh.code/components/mal/: CMakeLists.txt  Kconfig
idh.code/components/ml/: CMakeLists.txt
idh.code/components/nanopb/: CMakeLists.txt
idh.code/components/net/: CMakeLists.txt  Kconfig
idh.code/components/nvm/: CMakeLists.txt
idh.code/components/poc/: CMakeLists.txt  Kconfig
idh.code/components/rpc/: CMakeLists.txt  core.cmake
idh.code/components/service/: CMakeLists.txt  Kconfig
idh.code/components/tts/: CMakeLists.txt  Kconfig
idh.code/components/unity/: CMakeLists.txt
idh.code/examples/: CMakeLists.txt
idh.code/examples/appimg_hello_example/: CMakeLists.txt  README.md  appimg_hello_example.c
idh.code/examples/audio_example/: CMakeLists.txt  README.md  audio_example.c
idh.code/examples/camera_capture_example/: CMakeLists.txt  README.md  cam_capture.cpp
idh.code/examples/camera_prev_display/: CMakeLists.txt  README.md  cam_prev.cpp
idh.code/examples/lcd_display/: CMakeLists.txt  README.md  lcd_display.cpp
idh.code/examples/virt_at_example/: CMakeLists.txt  README.md  virt_at_example.c
idh.code/examples/wifi_scan/: CMakeLists.txt  README.md  wifi_scan.c
idh.code/tools/: build_all_target.sh  codesize.py  cpiogen.py  deliverpack.py  iomuxgen.py  keypadgen.py  launch.bat  launch.sh  modemgen.py  nvbintool.py
idh.code/tools/fota/: output.pack
idh.code/tools/linux/: dtools  lzmar
(+1258 files in other folders)
